# copilot-bot

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
config/: app.sample.toml
copilot-api/: Cargo.toml
copilot-config/: Cargo.toml
copilot-config/src/: config.rs  i18n.rs  lib.rs  version.rs
copilot-telegram/: Cargo.toml
copilot-utils/: Cargo.toml
copilot-utils/src/: file.rs
copilot-web/: Cargo.toml  build.rs
copilot-web/src/: lib.rs  main.rs  version.rs
copilot-web/src/routers/: health_check.rs  mod.rs
