[workspace]
members = ["copilot-config", "copilot-telegram", "copilot-web", "copilot-api", "copilot-utils"]
default-members = ["copilot-web"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["suwen <zanran2048@gmail.com>"]
description = "About A copilot bot for telegram/discord and integrates with ChatGPT"
homepage = "https://github.com/tianxiaxi/copilot-bot"
keywords = ["axum", "openai", "telegram", "bot", "chatGPT"]
readme = "README.md"
repository = "https://github.com/tianxiaxi/copilot-bot"
license = "Apache-2.0"

[workspace.dependencies]
diesel = { version = "2.0.3", features = ["postgres", "mysql", "sqlite"] }
serde = "1.0.159"
toml_edit = "0.19.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
