[package]
name = "copilot-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time", "fmt"] }
copilot-config = { path = "../copilot-config" }
tracing-appender = "0.2.2"

